--- a/users.ini
+++ b/users.ini
@@ -3,3 +3,4 @@ BC:5F:F4:67:9C:A600426-292-0000007-85516  - Я (2 пк)
 30:65:EC:84:BB:8500327-30270-91616-AAOEM
 7A:79:19:28:AD:0300331-10000-00001-AA523  - https://vk.com/gonalog
 04:7D:7B:9B:5C:8400326-30000-00001-AA728  - https://vk.com/gonalog
+4C:CC:6A:2D:D8:1D00426-OEM-8992662-00173  - https://vk.com/id186811368
