--- a/users.ini
+++ b/users.ini
@@ -6,3 +6,4 @@ BC:5F:F4:67:9C:A600426-292-0000007-85516  - Я (2 пк)
 4C:CC:6A:2D:D8:1D00426-OEM-8992662-00173  - https://vk.com/id186811368
 7A:79:19:59:4B:8F00327-60000-00000-AA645  - https://vk.com/romanmartirosyan
 10:62:EB:DF:3B:3700329-00000-00003-AA080  - https://vk.com/id531466684
+68:14:01:31:C0:B100327-30000-00000-AAOEM  - https://vk.com/id531466684
